[tool.poetry]
name = "impressions-datasets"
version = "0.1.0"
description = ""
authors = ["Fernando Benjamin PEREZ MAURERA <fperezmaurera@gmail.com>"]
readme = "README.md"
packages = [{include = "impressions_datasets"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"
scipy = "^1.12.0"
dask = {extras = ["complete"], version = "^2024.1.1"}
attrs = "^23.2.0"
pyarrow = "^15.0.0"
tqdm = "^4.66.1"
numba = "^0.59.0"
distributed = "^2024.1.1"
bokeh = "^3.3.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pylint = "^3.0.3"
black = {extras = ["d"], version = "^24.1.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
