[tool.poetry]
name = "impressions-datasets"
version = "0.1.0"
description = ""
authors = ["Fernando B. PÉREZ MAURERA <fperezmaurera@gmail.com>"]
readme = "README.md"
packages = [{ include = "impressions_datasets" }, { include = "impressions_datasets/py.typed" }]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.3"
pandas = "^2.2.2"
scipy = "^1.14.1"
dask = { extras = ["complete"], version = "^2024.9.0" }
attrs = "^24.2.0"
pyarrow = "^17.0.0"
tqdm = "^4.66.5"
numba = "^0.60.0"
distributed = "^2024.9.0"
bokeh = "^3.5.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.6.5"

[tool.poetry.group.typing.dependencies]
pandas-stubs = "^2.2.2.240909"
tqdm-stubs = "^0.2.1"
types-tqdm = "^4.66.0.20240417"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
ignore_missing_imports = true
strict = true
